--- a/services.html
+++ b/services.html
@@ -59,9 +59,9 @@
 						<div class="header-row">
 							<div class="header-column header-column-border-right flex-grow-0 d-sticky-header-active-none">
 								<div class="header-row">
-									<div class="header-logo p-relative top-1 m-0">
+									<div class="header-logo p-relative top-1 m-0" width="320" height="150">
 										<a href="index.html">
-											<img alt="Porto" width="320" height="150" src="img/demos/transportation-logistic/logo.jpg">
+											<img alt="Belle Pest Control" width="320" height="150" src="image003.png">
 										</a>
 									</div>
 								</div>
@@ -69,11 +69,11 @@
 							<div class="header-column">
 								<div class="border-bottom-light w-100">
 									<div class="hstack gap-4 px-4 py-2 font-weight-semi-bold d-none d-lg-flex">
-										<div class="d-none d-lg-inline-block ps-1"><a class="text-color-default text-color-hover-primary text-2" href="#">800 123 4567</a></div>
+										<div class="d-none d-lg-inline-block ps-1"><a class="text-color-default text-color-hover-primary text-2" href="#">(305) 721 9863</a></div>
 										<div class="vr d-lg-inline-block opacity-2 d-none d-xl-inline-block"></div>
-										<div class="d-none d-xl-inline-block"><a class="text-color-default text-color-hover-primary text-2" href="#">porto@domain.com</a></div>
+										<div class="d-none d-xl-inline-block"><a class="text-color-default text-color-hover-primary text-2" href="#">bellepestcontrol@gmail.com</a></div>
 										<div class="vr opacity-2 d-none d-xl-inline-block"></div>
-										<div class="d-none d-xl-inline-block"><span class="text-color-default text-color-hover-primary text-2">Mon — Sat: 9AM — 6PM</span></div>
+										<div class="d-none d-xl-inline-block"><span class="text-color-default text-color-hover-primary text-2">Mon — Sat: 7AM — 9PM</span></div>
 										<div class="ms-auto d-none d-lg-inline-block">
 											<ul class="nav nav-pills">
 												<li class="nav-item dropdown">
@@ -116,128 +116,23 @@
 													<nav class="collapse">
 														<ul class="nav nav-pills" id="mainNav">
 															<li class="dropdown">
-																<a href="demo-transportation-logistic.html" class="nav-link">
+																<a href="index.html" class="nav-link active">
 																	Home
 																</a>
 															</li>
 															<li>
-																<a class="nav-link" href="demo-transportation-logistic-about-us.html">
+																<a class="nav-link" href="about-us.html">
 																	About Us
 																</a>
 															</li>
-															<li class="dropdown dropdown-mega">
-																<a class="dropdown-item dropdown-toggle" href="elements.html">
-
-																	Elements
-
-																</a>
-																<ul class="dropdown-menu border-top border-top-light mt-0">
-
-																	<li>
-																		<div class="dropdown-mega-content container px-2">
-																			<div class="row px-1">
-																				<div class="col-lg-3">
-																					<span class="dropdown-mega-sub-title">Elements 1</span>
-																					<ul class="dropdown-mega-sub-nav">
-																						<li><a class="dropdown-item" href="elements-accordions.html">Accordions</a></li>
-																						<li><a class="dropdown-item" href="elements-alerts.html">Alerts</a></li>
-																						<li><a class="dropdown-item" href="elements-animations.html">Animations</a></li>
-																						<li><a class="dropdown-item" href="elements-arrows.html">Arrows</a></li>
-																						<li><a class="dropdown-item" href="elements-badges.html">Badges</a></li>
-																						<li><a class="dropdown-item" href="elements-before-after.html">Before / After</a></li>
-																						<li><a class="dropdown-item" href="elements-blockquotes.html">Blockquotes</a></li>
-																						<li><a class="dropdown-item" href="elements-buttons.html">Buttons</a></li>
-																						<li><a class="dropdown-item" href="elements-call-to-action.html">Call to Action</a></li>
-																						<li><a class="dropdown-item" href="elements-cards.html">Cards</a></li>
-																						<li><a class="dropdown-item" href="elements-carousels.html">Carousels</a></li>
-																						<li><a class="dropdown-item" href="elements-cascading-images.html">Cascading Images</a></li>
-																					</ul>
-																				</div>
-																				<div class="col-lg-3">
-																					<span class="dropdown-mega-sub-title">Elements 2</span>
-																					<ul class="dropdown-mega-sub-nav">
-																						<li><a class="dropdown-item" href="elements-content-rotate.html">Content Rotate</a></li>
-																						<li><a class="dropdown-item" href="elements-countdowns.html">Countdowns</a></li>
-																						<li><a class="dropdown-item" href="elements-counters.html">Counters</a></li>
-																						<li><a class="dropdown-item" href="elements-dividers.html">Dividers</a></li>
-																						<li><a class="dropdown-item" href="elements-forms.html">Forms</a></li>
-																						<li><a class="dropdown-item" href="elements-headings.html">Headings</a></li>
-																						<li><a class="dropdown-item" href="elements-icons.html">Icons</a></li>
-																						<li><a class="dropdown-item" href="elements-icon-boxes.html">Icon Boxes</a></li>
-																						<li><a class="dropdown-item" href="elements-image-frames.html">Image Frames</a></li>
-																						<li><a class="dropdown-item" href="elements-image-gallery.html">Image Gallery</a></li>
-																						<li><a class="dropdown-item" href="elements-image-hotspots.html">Image Hotspots</a></li>
-																						<li><a class="dropdown-item" href="elements-lightboxes.html">Lightboxes</a></li>
-																					</ul>
-																				</div>
-																				<div class="col-lg-3">
-																					<span class="dropdown-mega-sub-title">Elements 3</span>
-																					<ul class="dropdown-mega-sub-nav">
-																						<li><a class="dropdown-item" href="elements-lists.html">Lists</a></li>						
-																						<li><a class="dropdown-item" href="elements-maps.html">Maps</a></li>
-																						<li><a class="dropdown-item" href="elements-medias.html">Medias</a></li>
-																						<li><a class="dropdown-item" href="elements-modals.html">Modals</a></li>
-																						<li><a class="dropdown-item" href="elements-parallax.html">Parallax</a></li>
-																						<li><a class="dropdown-item" href="elements-particles.html">Particles</a></li>
-																						<li><a class="dropdown-item" href="elements-posts.html">Posts</a></li>
-																						<li><a class="dropdown-item" href="elements-pricing-tables.html">Pricing Tables</a></li>
-																						<li><a class="dropdown-item" href="elements-process.html">Process</a></li>
-																						<li><a class="dropdown-item" href="elements-progressbars.html">Progress Bars</a></li>
-																						<li><a class="dropdown-item" href="elements-random-images.html">Random Images</a></li>
-																						<li><a class="dropdown-item" href="elements-read-more.html">Read More</a></li>
-																					</ul>
-																				</div>
-																				<div class="col-lg-3">
-																					<span class="dropdown-mega-sub-title">Elements 4</span>
-																					<ul class="dropdown-mega-sub-nav">
-																						<li><a class="dropdown-item" href="elements-sections.html">Sections</a></li>
-																						<li><a class="dropdown-item" href="elements-shape-dividers.html">Shape Dividers</a></li>
-																						<li><a class="dropdown-item" href="elements-star-ratings.html">Star Ratings</a></li>
-																						<li><a class="dropdown-item" href="elements-sticky-elements.html">Sticky Elements</a></li>
-																						<li><a class="dropdown-item" href="elements-tables.html">Tables</a></li>
-																						<li><a class="dropdown-item" href="elements-tabs.html">Tabs</a></li>
-																						<li><a class="dropdown-item" href="elements-testimonials.html">Testimonials</a></li>
-																						<li><a class="dropdown-item" href="elements-toggles.html">Toggles</a></li>
-																						<li><a class="dropdown-item" href="elements-tooltips-popovers.html">Tooltips & Popovers</a></li>
-																						<li><a class="dropdown-item" href="elements-typography.html">Typography</a></li>
-																						<li><a class="dropdown-item" href="elements-word-rotator.html">Word Rotator</a></li>
-																						<li><a class="dropdown-item" href="elements-360-image-viewer.html">360º Image Viewer</a></li>
-																					</ul>
-																				</div>
-																			</div>
-																		</div>
-																	</li>
-																</ul>
-															</li>
 
 															<li>
-																<a class="nav-link active" href="demo-transportation-logistic-services.html">
+																<a class="nav-link" href="services.html">
 																	Services
 																</a>
 															</li>
-															<li class="dropdown">
-																<a class="nav-link dropdown-toggle" href="#">
-																	Pages
-																</a>
-																<ul class="dropdown-menu border-light mt-n1">
-																	<li>
-																		<a href="page-team.html" class="dropdown-item">Team</a>
-																	</li>
-																	<li>
-																		<a href="page-careers.html" class="dropdown-item">Careers</a>
-																	</li>
-																	<li>
-																		<a href="page-faq.html" class="dropdown-item">FAQ's</a>
-																	</li>
-																</ul>
-															</li>
 															<li>
-																<a class="nav-link" href="demo-transportation-logistic-news.html">
-																	News
-																</a>
-															</li>
-															<li>
-																<a class="nav-link" href="demo-transportation-logistic-contact-us.html">
+																<a class="nav-link" href="contact-us.html">
 																	Contact Us
 																</a>
 															</li>
@@ -251,8 +146,8 @@
 										</div>
 										<div class="vr opacity-2 ms-auto d-none d-xl-inline-block"></div>
 										<div class="px-4 d-none d-xxl-inline-block ws-nowrap">
-											<a href="#" class="btn border-0 px-4 py-2 line-height-9 btn-tertiary me-2">Request Rate</a>
-											<a href="#" class="btn border-0 px-4 py-2 line-height-9 btn-primary">Track Order</a>
+											<a href="tel:3057219863" class="btn border-0 px-4 py-2 line-height-9 btn-tertiary me-2">Request Rate</a>
+											<a href="contact-us.html" class="btn border-0 px-4 py-2 line-height-9 btn-primary"> Contact Us</a>
 										</div>
 									</div>
 								</div>
