--- a/services.html
+++ b/services.html
@@ -311,15 +311,15 @@
 						<div class="col-4 mb-4">
 							<span class="thumb-info thumb-info-swap-content anim-hover-inner-wrapper">
 								<span class="thumb-info-wrapper overlay overlay-show overlay-gradient-bottom-content">
-									<img src="img/demos/transportation-logistic/services/service-1.jpg" class="img-fluid" alt="">
+									<img src="img/bellepics/3ED87F48-C722-4B42-8E0D-D778483D1B98_1_102_o.jpeg" class="img-fluid" alt="">
 									<span class="thumb-info-title bottom-30 bg-transparent w-100 mw-100 p-0 text-center">
 										<span class="thumb-info-swap-content-wrapper">
 											<span class="thumb-info-inner text-3-5 pb-2">
-												Registered Shippers
+												Commercial Services
 											</span>
 											<span class="thumb-info-inner text-2">
-												<p class="px-5 text-2 opacity-7 font-weight-medium text-light ls-0">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
-												<a href="#" class="btn border-0 px-3 py-1 line-height-8 btn-primary ls-0">View Details</a>
+												<p class="px-5 text-2 opacity-7 font-weight-medium text-light ls-0">Infestations can cause damage to your building, electrical equipment, and your business as a whole.</p>
+												<a href="contact-us.html" class="btn border-0 px-3 py-1 line-height-8 btn-primary ls-0">Ask for a quote!</a>
 											</span>
 										</span>
 									</span>
@@ -329,15 +329,15 @@
 						<div class="col-4 mb-4">
 							<span class="thumb-info thumb-info-swap-content anim-hover-inner-wrapper">
 								<span class="thumb-info-wrapper overlay overlay-show overlay-gradient-bottom-content">
-									<img src="img/demos/transportation-logistic/services/service-2.jpg" class="img-fluid" alt="">
+									<img src="img/bellepics/DA8533DB-90FF-4F5B-8E84-C46AF3494E67_1_102_o.jpeg" class="img-fluid" alt="">
 									<span class="thumb-info-title bottom-30 bg-transparent w-100 mw-100 p-0 text-center">
 										<span class="thumb-info-swap-content-wrapper">
 											<span class="thumb-info-inner text-3-5 pb-2">
-												Local Pickup and Delivery
+												Residential Services
 											</span>
 											<span class="thumb-info-inner text-2">
-												<p class="px-5 text-2 opacity-7 font-weight-medium text-light ls-0">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
-												<a href="#" class="btn border-0 px-3 py-1 line-height-8 btn-primary ls-0">View Details</a>
+												<p class="px-5 text-2 opacity-7 font-weight-medium text-light ls-0">In addition to posing health dangers to humans, animals, and children, pests can also harm your property.</p>
+												<a href="contact-us.html" class="btn border-0 px-3 py-1 line-height-8 btn-primary ls-0">We can help!</a>
 											</span>
 										</span>
 									</span>
@@ -347,15 +347,15 @@
 						<div class="col-4 mb-4">
 							<span class="thumb-info thumb-info-swap-content anim-hover-inner-wrapper">
 								<span class="thumb-info-wrapper overlay overlay-show overlay-gradient-bottom-content">
-									<img src="img/demos/transportation-logistic/services/service-3.jpg" class="img-fluid" alt="">
+									<img src="img/bellepics/E31E3E0A-82FA-499B-9BED-143C68E20120_4_5005_c.jpeg" class="img-fluid" alt="">
 									<span class="thumb-info-title bottom-30 bg-transparent w-100 mw-100 p-0 text-center">
 										<span class="thumb-info-swap-content-wrapper">
 											<span class="thumb-info-inner text-3-5 pb-2">
-												Freight Consolidation
+												Institution Services
 											</span>
 											<span class="thumb-info-inner text-2">
-												<p class="px-5 text-2 opacity-7 font-weight-medium text-light ls-0">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
-												<a href="#" class="btn border-0 px-3 py-1 line-height-8 btn-primary ls-0">View Details</a>
+												<p class="px-5 text-2 opacity-7 font-weight-medium text-light ls-0">Pests can post dangers to institutions such as goverment and colleges, while also affecting the work enviroment.</p>
+												<a href="contact-us.html" class="btn border-0 px-3 py-1 line-height-8 btn-primary ls-0">Contact Us!</a>
 											</span>
 										</span>
 									</span>
