--- a/about-us.html
+++ b/about-us.html
@@ -116,12 +116,12 @@
 													<nav class="collapse">
 														<ul class="nav nav-pills" id="mainNav">
 															<li class="dropdown">
-																<a href="index.html" class="nav-link active">
+																<a href="index.html" class="nav-link ">
 																	Home
 																</a>
 															</li>
 															<li>
-																<a class="nav-link" href="about-us.html">
+																<a class="nav-link active" href="about-us.html">
 																	About Us
 																</a>
 															</li>
@@ -199,12 +199,12 @@
 						<div class="col-lg-6">
 							<div class="cascading-images-wrapper mt-5">
 								<div class="cascading-images position-relative">
-									<img src="img/demos/transportation-logistic/services/service-1.jpg" class="appear-animation" width="500" alt="" data-appear-animation="expandIn" data-appear-animation-duration="600ms" />
+									<img src="img/bellepics/417D7CE6-7D5E-48E4-A0AB-50466833313D_1_102_o.jpeg" class="appear-animation" width="500" alt="" data-appear-animation="expandIn" data-appear-animation-duration="600ms" />
 									<div class="position-absolute w-100" style="top: 41%; left: -30%;">
-										<img src="img/demos/transportation-logistic/services/service-2.jpg" class="appear-animation" width="500" alt="" data-appear-animation="expandIn" data-appear-animation-delay="300" data-appear-animation-duration="600ms" />
+										<img src="img/bellepics/D474DDAB-AEC0-43A4-B03E-42DDAC71935E_1_102_o.jpeg" class="appear-animation" width="500" alt="" data-appear-animation="expandIn" data-appear-animation-delay="300" data-appear-animation-duration="600ms" />
 									</div>
 									<div class="position-absolute w-100" style="top: 75%; left: 30%;">
-										<img src="img/demos/transportation-logistic/services/service-3.jpg" class="appear-animation" width="500" alt="" data-appear-animation="expandIn" data-appear-animation-delay="600" data-appear-animation-duration="600ms" />
+										<img src="img/bellepics/FF12DC55-3DC4-4F54-AB82-381FB1281912_1_102_o.jpeg" class="appear-animation" width="500" alt="" data-appear-animation="expandIn" data-appear-animation-delay="600" data-appear-animation-duration="600ms" />
 									</div>
 								</div>
 							</div>
