--- a/contact-us.html
+++ b/contact-us.html
@@ -116,7 +116,7 @@
 													<nav class="collapse">
 														<ul class="nav nav-pills" id="mainNav">
 															<li class="dropdown">
-																<a href="index.html" class="nav-link active">
+																<a href="index.html" class="nav-link">
 																	Home
 																</a>
 															</li>
@@ -132,7 +132,7 @@
 																</a>
 															</li>
 															<li>
-																<a class="nav-link" href="contact-us.html">
+																<a class="nav-link active" href="contact-us.html">
 																	Contact Us
 																</a>
 															</li>
