--- a/services.html
+++ b/services.html
@@ -116,7 +116,7 @@
 													<nav class="collapse">
 														<ul class="nav nav-pills" id="mainNav">
 															<li class="dropdown">
-																<a href="index.html" class="nav-link active">
+																<a href="index.html" class="nav-link ">
 																	Home
 																</a>
 															</li>
@@ -127,7 +127,7 @@
 															</li>
 
 															<li>
-																<a class="nav-link" href="services.html">
+																<a class="nav-link active" href="services.html">
 																	Services
 																</a>
 															</li>
