--- a/about-us.html
+++ b/about-us.html
@@ -314,26 +314,26 @@
 				</section>
 
 			</div>
-			<footer id="footer" class="position-relative top-1 bg-tertiary border-top-0 mt-0">
+			<footer id="footer" class="position-relative top-1 bg-tertiary border-top-0">
 
 				<div class="container py-5">
 					<div class="row pt-5">
 						<div class="col-lg-4">
 							<a href="demo-transportation-logistic.html" class="text-decoration-none">
-								<img src="img/demos/transportation-logistic/logo-footer.png" class="img-fluid mb-4" width="88">
+								<img src="image003.png" class="img-fluid mb-4" width="88">
 							</a>
-							<p class="text-3-5 pe-lg-2">Lorem ipsum dolor sit amet, consectetur adipiscing elit quisque rutrum pellentesqu. </p>
+							<p class="text-3-5 pe-lg-2">Since its founding in 2008, Belle Pest Control has provided individualized pest management plans and cutting-edge technologies to safeguard homes and businesses throughout the state of Florida.</p>
 							<ul class="list list-unstyled">
 								<li class="d-flex align-items-center mb-4">
-									<a href="mailto:porto@transportation-logistic.com" class="d-inline-flex align-items-center text-decoration-none text-color-light text-color-hover-primary font-weight-semibold text-4-5">porto@domain.com</a>
+									<a href="mailto:porto@transportation-logistic.com" class="d-inline-flex align-items-center text-decoration-none text-color-light text-color-hover-primary font-weight-semibold text-4-5">bellepestcontrol@gmail.com</a>
 								</li>
 								<li class="d-flex align-items-center mb-4">
-									<a href="tel:8001234567" class="d-inline-flex align-items-center text-decoration-none text-color-light text-color-hover-primary font-weight-semibold text-4-5">800-123-4567</a>
+									<a href="tel:3057219863" class="d-inline-flex align-items-center text-decoration-none text-color-light text-color-hover-primary font-weight-semibold text-4-5">(305)-721-9863</a>
 								</li>
 							</ul>
 							<div class="d-none d-xxl-inline-block ws-nowrap">
-								<a href="#" class="btn border-0 px-4 py-2 line-height-9 btn-light text-color-dark me-2">Request Rate</a>
-								<a href="#" class="btn border-0 px-4 py-2 line-height-9 btn-primary">Track Order</a>
+								<a href="tel:3057219863" class="btn border-0 px-4 py-2 line-height-9 btn-light text-color-dark me-2">Request Rate</a>
+								<a href="contact-us.html" class="btn border-0 px-4 py-2 line-height-9 btn-primary"> Contact Us</a>
 							</div>
 						</div>
 						<div class="col-lg-8">
@@ -341,41 +341,11 @@
 								<div class="col-lg-6 mb-4 mb-lg-0">
 									<h4 class="text-color-light font-weight-semibold mb-3">Navigation</h4>
 									<ul class="list list-unstyled columns-lg-2">
-										<li><a href="#" class="text-color-grey text-color-hover-primary">Home</a></li>
-										<li><a href="#" class="text-color-grey text-color-hover-primary">About Us</a></li>
-										<li><a href="#" class="text-color-grey text-color-hover-primary">Services</a></li>
-										<li><a href="#" class="text-color-grey text-color-hover-primary">News</a></li>
-										<li><a href="#" class="text-color-grey text-color-hover-primary">Pages</a></li>
-										<li><a href="#" class="text-color-grey text-color-hover-primary">Contact Us</a></li>
+										<li><a href="index.html" class="text-color-grey text-color-hover-primary">Home</a></li>
+										<li><a href="about-us.html" class="text-color-grey text-color-hover-primary">About Us</a></li>
+										<li><a href="services.html" class="text-color-grey text-color-hover-primary">Services</a></li>
+										<li><a href="contact-us.html" class="text-color-grey text-color-hover-primary">Contact Us</a></li>
 									</ul>
-								</div>
-								<div class="col-lg-6">
-									<h4 class="text-color-light font-weight-semibold mb-3">Useful Links</h4>
-									<ul class="list list-unstyled columns-lg-2">
-										<li><a href="#" class="text-color-grey text-color-hover-primary">Registered Shippers</a></li>
-										<li><a href="#" class="text-color-grey text-color-hover-primary">Local Pickup</a></li>
-										<li><a href="#" class="text-color-grey text-color-hover-primary">Local Delivery</a></li>
-										<li><a href="#" class="text-color-grey text-color-hover-primary">Freight Consolidation</a></li>
-									</ul>
-								</div>
-							</div>
-							<div class="row">
-								<div class="col p-relative bottom-3">
-									<div class="alert alert-success d-none" id="newsletterSuccess">
-										<strong>Success!</strong> You've been added to our email list.
-									</div>
-									<div class="alert alert-danger d-none" id="newsletterError"></div>
-									<div class="d-flex flex-column flex-lg-row align-items-start align-items-lg-center">
-										<h4 class="text-color-light ws-nowrap me-3 mb-3 mb-lg-0">Subscribe to Newsletter:</h4>
-										<form id="newsletterForm" class="form-style-3 w-100" action="php/newsletter-subscribe.php" method="POST">
-											<div class="d-flex">
-												<input class="form-control box-shadow-none" placeholder="Email Address" name="newsletterEmail" id="newsletterEmail" type="text" />
-												<button class="btn btn-primary custom-form-control-newsletter-btn btn-px-3 btn-py-2 font-weight-bold" type="submit">
-													GO
-												</button>
-											</div>
-										</form>
-									</div>
 								</div>
 							</div>
 						</div>
@@ -386,7 +356,7 @@
 						<hr class="bg-color-light opacity-1">
 						<div class="row">
 							<div class="col mt-4 mb-4 pb-4">
-								<p class="text-center text-3 mb-0 text-color-grey">Porto Transportation & Logistic © 2022. All Rights Reserved.</p>
+								<p class="text-center text-3 mb-0 text-color-grey">Belle Pest Control, LLC © 2022. All Rights Reserved.</p>
 							</div>
 						</div>
 					</div>
