--- a/about-us.html
+++ b/about-us.html
@@ -178,20 +178,20 @@
 				<div class="container">
 					<div class="row py-5 my-3">
 						<div class="col-lg-6">
-							<p class="font-weight-medium text-8 line-height-4 text-color-tertiary negative-ls-1 p-relative bottom-10">We are <strong>committed</strong> to providing our clients the best logistic and transportation services.</p>
+							<p class="font-weight-medium text-8 line-height-4 text-color-tertiary negative-ls-1 p-relative bottom-10">We are <strong>committed</strong> to providing our clients the best pest control and termite services.</p>
 
-							<p class="line-height-8 font-weight-medium text-4">Lorem ipsum dolor sit amet, <span class="highlight highlight-primary highlight-bg-opacity highlight-animated text-color-tertiary" data-appear-animation="highlight-animated-start" data-appear-animation-delay="400" data-plugin-options="{'flagClassOnly': true}">Pellentesque molestie vel turpis a sodales.</span> consectetur adipiscing elit. Sed eget risus porta, tincidunt turpis at, interdum tortor. Suspendisse potenti. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sociis natoque penatibus et magnis dis parturient montes</p>
+							<p class="line-height-8 font-weight-medium text-4">The insects and rodents that create so much bother for homeowners <span class="highlight highlight-primary highlight-bg-opacity highlight-animated text-color-tertiary" data-appear-animation="highlight-animated-start" data-appear-animation-delay="400" data-plugin-options="{'flagClassOnly': true}">are our area of expertise.</span> With a combined total of more than </p>
 
-							<p class="custom-drop-caps font-weight-medium text-4 my-4"><span class="custom-drop-caps-number text-color-dark negative-ls-1"><span class="d-inline-block appear-animation" data-appear-animation="fadeIn" data-appear-animation-delay="0">35</span></span> years in business and cras a elit sit amet leo accumsan vo lutpat su spendisse hendrerit amet leo.</p>
+							<p class="custom-drop-caps font-weight-medium text-4 my-4"><span class="custom-drop-caps-number text-color-dark negative-ls-1"><span class="d-inline-block appear-animation" data-appear-animation="fadeIn" data-appear-animation-delay="0">15</span></span> 15 years in the pest control business, our personnel are equipped to handle even the most challenging circumstances safely.</p>
 
-							<p class="line-height-7 font-weight-regular text-3">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed eget risus porta, tincidunt turpis at, interdum tortor. Suspendisse potenti.</p>
+							<p class="line-height-7 font-weight-regular text-3">We offer personalized treatment to better meet your unique needs. Thanks to our reasonable rates and first-rate personalized service, Belle Pest Management has long been the go-to choice for neighborhood pest control. No one, including pets and household plants, will suffer any negative effects from our treatments.</p>
 
 							<div class="d-flex flex-row pt-3">
 								<div class="pt-2">
 									<img class="avatar rounded-circle" alt="" width="50" src="img/avatars/avatar-4.jpg">
 								</div>
 								<div class="ps-3">
-									<h4 class="mt-2 mb-0 text-5 font-weight-semi-bold">John Doe</h2>
+									<h4 class="mt-2 mb-0 text-5 font-weight-semi-bold">Yaunet Hernandez</h2>
 									<p class="mb-2 font-weight-medium text-3">CEO & FOUNDER</p>
 								</div>
 							</div>
