--- a/contact-us.html
+++ b/contact-us.html
@@ -221,17 +221,32 @@
 
 				<hr>
 
-				<section class="border-0 p-relative pb-5">
+				<section class="border-0 p-relative">
 
 					<div class="p-absolute custom-text-pos-3 appear-animation" data-appear-animation="fadeInRightShorter" data-appear-animation-delay="500" data-plugin-options="{'minWindowWidth': 0}">
 						<h2 class="custom-heading-1 rotate-r-90 d-none d-lg-inline-block">Where We Are</h2>
 					</div>
 
-					<div class="container-fluid pt-5">
+					<div class="container">
+						<div class="row pt-5 pb-4">
+							<div class="col-md-8">
+								<h3 class="font-weight-semibold text-9 text-capitalize mb-2">Our Locations</h3>
+								<div class="divider divider-small mt-0 mb-4">
+									<hr class="bg-primary">
+								</div>
+							</div>
+							<div class="col-md-4 text-md-end">
+								<a href="contact-us.html" class="btn btn-tertiary border-0 text-3-5 font-weight-semi-bold btn-px-5 btn-py-3 d-none d-md-inline-block">Request Rate</a>
+							</div>
+						</div>
+					</div>
+
+					<div class="container-fluid">
 						<div class="row justify-content-center">
 							<div class="col-lg-10">
-								<!-- Google Maps - Go to the bottom of the page to change settings and map location. -->
-								<div id="googlemaps" class="google-map m-0" style="min-height: 600px;"></div>
+								<!-- Google Maps - Go to the bottom of the page to change settings and map location.
+								<div id="googlemaps" class="google-map m-0" style="min-height: 600px;"></div>-->
+								<div class="mapouter"><div class="gmap_canvas"><iframe width="900" height="500" id="gmap_canvas" src="https://maps.google.com/maps?q=Miami&t=&z=7&ie=UTF8&iwloc=&output=embed" frameborder="0" scrolling="no" marginheight="0" marginwidth="0"></iframe><br><style>.mapouter{position:relative;text-align:right;height:500px;width:900px;}</style><style>.gmap_canvas {overflow:hidden;background:none!important;height:500px;width:900px;}</style></div></div>
 							</div>
 						</div>
 					</div>
@@ -241,34 +256,14 @@
 							<div class="col">
 								<div class="owl-carousel owl-theme nav-dark nav-style-1 nav-arrows-thin nav-font-size-lg nav-outside mb-0" data-plugin-options="{'responsive': {'0': {'items': 1}, '479': {'items': 1}, '768': {'items': 2}, '979': {'items': 2}, '1199': {'items': 4}}, 'loop': false, 'nav': true, 'dots': false, 'margin': 40}">
 									<div>
-										<p class="font-weight-semibold text-color-tertiary text-4 line-height-6 mb-2">123 Porto Drive, Suite 10B, Vista, New York, 99123</p>
-										<p class="font-weight-medium text-3 line-height-5 mb-2"><a href="mailto:mail@domain.com">mail@domain.com</a></p>
-										<p class="font-weight-medium text-3 line-height-5 mb-0">800 123 4567</p>
+										<p class="font-weight-semibold text-color-tertiary text-4 line-height-6 mb-2">Miami, FL, United States</p>
+										<p class="font-weight-medium text-3 line-height-5 mb-2"><a href="mailto:bellepestcontrol@gmail.com">bellepestcontrol@gmail.com</a></p>
+										<p class="font-weight-medium text-3 line-height-5 mb-0">(305) 721 9863</p>
 									</div>
 									<div>
-										<p class="font-weight-semibold text-color-tertiary text-4 line-height-6 mb-2">123 Porto Drive, Suite 10B, Vista, New York, 99123</p>
-										<p class="font-weight-medium text-3 line-height-5 mb-2"><a href="mailto:mail@domain.com">mail@domain.com</a></p>
-										<p class="font-weight-medium text-3 line-height-5 mb-0">800 123 4567</p>
-									</div>
-									<div>
-										<p class="font-weight-semibold text-color-tertiary text-4 line-height-6 mb-2">123 Porto Drive, Suite 10B, Vista, New York, 99123</p>
-										<p class="font-weight-medium text-3 line-height-5 mb-2"><a href="mailto:mail@domain.com">mail@domain.com</a></p>
-										<p class="font-weight-medium text-3 line-height-5 mb-0">800 123 4567</p>
-									</div>
-									<div>
-										<p class="font-weight-semibold text-color-tertiary text-4 line-height-6 mb-2">123 Porto Drive, Suite 10B, Vista, New York, 99123</p>
-										<p class="font-weight-medium text-3 line-height-5 mb-2"><a href="mailto:mail@domain.com">mail@domain.com</a></p>
-										<p class="font-weight-medium text-3 line-height-5 mb-0">800 123 4567</p>
-									</div>
-									<div>
-										<p class="font-weight-semibold text-color-tertiary text-4 line-height-6 mb-2">123 Porto Drive, Suite 10B, Vista, New York, 99123</p>
-										<p class="font-weight-medium text-3 line-height-5 mb-2"><a href="mailto:mail@domain.com">mail@domain.com</a></p>
-										<p class="font-weight-medium text-3 line-height-5 mb-0">800 123 4567</p>
-									</div>
-									<div>
-										<p class="font-weight-semibold text-color-tertiary text-4 line-height-6 mb-2">123 Porto Drive, Suite 10B, Vista, New York, 99123</p>
-										<p class="font-weight-medium text-3 line-height-5 mb-2"><a href="mailto:mail@domain.com">mail@domain.com</a></p>
-										<p class="font-weight-medium text-3 line-height-5 mb-0">800 123 4567</p>
+										<p class="font-weight-semibold text-color-tertiary text-4 line-height-6 mb-2">Naples, FL, United States</p>
+										<p class="font-weight-medium text-3 line-height-5 mb-2"><a href="mailto:bellepestcontrol@gmail.com">bellepestcontrol@gmail.com</a></p>
+										<p class="font-weight-medium text-3 line-height-5 mb-0">(305) 721 9863</p>
 									</div>
 								</div>
 							</div>
