--- a/services.html
+++ b/services.html
@@ -190,12 +190,12 @@
 								<div class="card-body p-5">
 									<div class="d-flex flex-row">
 										<div class="pt-2">
-											<img width="70" height="43" src="img/demos/transportation-logistic/icons/service-1.svg" alt="" data-icon data-plugin-options="{'onlySVG': true, 'extraClass': 'svg-fill-color-primary'}" />
+											<img width="90" height="63" src="img/animal-icons/rodents-icon.svg" alt="" data-icon data-plugin-options="{'onlySVG': true, 'extraClass': 'svg-fill-color-primary'}" />
 										</div>
 										<div class="ps-4">
-											<h4 class="mb-2 text-5 font-weight-semi-bold">Ground Shipping</h4>
-											<p class="mb-2 font-weight-medium text-3">Lorem ipsum dolor sit amet, conse ctetur adipi scing elit.</p>
-											<a href="#" class="text-uppercase text-2-5 stretched-link text-decoration-underline text-color-primary text-color-hover-tertiary font-weight-semi-bold transition-2ms d-inline-block">View More</a>
+											<h4 class="mb-2 text-5 font-weight-semi-bold">Rodents</h4>
+											<p class="mb-2 font-weight-medium text-3">Our rodent control specialists will develop a plan tailored to your needs to keep out rodents long-term.</p>
+											<a href="services.html" class="text-uppercase text-2-5 stretched-link text-decoration-underline text-color-primary text-color-hover-tertiary font-weight-semi-bold transition-2ms d-inline-block">View More</a>
 										</div>
 									</div>
 								</div>
@@ -206,12 +206,12 @@
 								<div class="card-body p-5">
 									<div class="d-flex flex-row">
 										<div class="pt-2">
-											<img width="70" height="26" src="img/demos/transportation-logistic/icons/service-2.svg" alt="" data-icon data-plugin-options="{'onlySVG': true, 'extraClass': 'svg-fill-color-primary'}" />
+											<img width="90" height="63" src="img/animal-icons/termites-icon.svg" alt="" data-icon data-plugin-options="{'onlySVG': true, 'extraClass': 'svg-fill-color-primary'}" />
 										</div>
 										<div class="ps-4">
-											<h4 class="mb-2 text-5 font-weight-semi-bold">Air Freight</h4>
-											<p class="mb-2 font-weight-medium text-3">Lorem ipsum dolor sit amet, conse ctetur adipi scing elit.</p>
-											<a href="#" class="text-uppercase text-2-5 stretched-link text-decoration-underline text-color-primary text-color-hover-tertiary font-weight-semi-bold transition-2ms d-inline-block">View More</a>
+											<h4 class="mb-2 text-5 font-weight-semi-bold">Ants and Roaches</h4>
+											<p class="mb-2 font-weight-medium text-3">Because of their adaptability, ants can make a living in a wide variety of ecosystems, we can help.</p>
+											<a href="services.html" class="text-uppercase text-2-5 stretched-link text-decoration-underline text-color-primary text-color-hover-tertiary font-weight-semi-bold transition-2ms d-inline-block">View More</a>
 										</div>
 									</div>
 								</div>
@@ -222,12 +222,12 @@
 								<div class="card-body p-5">
 									<div class="d-flex flex-row">
 										<div class="pt-2">
-											<img width="58" height="49" src="img/demos/transportation-logistic/icons/service-3.svg" alt="" data-icon data-plugin-options="{'onlySVG': true, 'extraClass': 'svg-fill-color-primary'}" />
+											<img width="58" height="49" src="img/animal-icons/mosquitoes-icon.svg" alt="" data-icon data-plugin-options="{'onlySVG': true, 'extraClass': 'svg-fill-color-primary'}" />
 										</div>
 										<div class="ps-4">
-											<h4 class="mb-2 text-5 font-weight-semi-bold">Warehousing</h4>
-											<p class="mb-2 font-weight-medium text-3">Lorem ipsum dolor sit amet, conse ctetur adipi scing elit.</p>
-											<a href="#" class="text-uppercase text-2-5 stretched-link text-decoration-underline text-color-primary text-color-hover-tertiary font-weight-semi-bold transition-2ms d-inline-block">View More</a>
+											<h4 class="mb-2 text-5 font-weight-semi-bold">Mosquitos</h4>
+											<p class="mb-2 font-weight-medium text-3">We follow methods, that when combined, disrupt the mosquito life cycle, eliminate the current population, and greatly reduce the roach population.</p>
+											<a href="services.html" class="text-uppercase text-2-5 stretched-link text-decoration-underline text-color-primary text-color-hover-tertiary font-weight-semi-bold transition-2ms d-inline-block">View More</a>
 										</div>
 									</div>
 								</div>
@@ -238,12 +238,12 @@
 								<div class="card-body p-5">
 									<div class="d-flex flex-row">
 										<div class="pt-2">
-											<img width="70" height="26" src="img/demos/transportation-logistic/icons/service-2.svg" alt="" data-icon data-plugin-options="{'onlySVG': true, 'extraClass': 'svg-fill-color-primary'}" />
+											<img width="90" height="63" src="img/animal-icons/termites-icon.svg" alt="" data-icon data-plugin-options="{'onlySVG': true, 'extraClass': 'svg-fill-color-primary'}" />
 										</div>
 										<div class="ps-4">
-											<h4 class="mb-2 text-5 font-weight-semi-bold">Air Freight</h4>
-											<p class="mb-2 font-weight-medium text-3">Lorem ipsum dolor sit amet, conse ctetur adipi scing elit.</p>
-											<a href="#" class="text-uppercase text-2-5 stretched-link text-decoration-underline text-color-primary text-color-hover-tertiary font-weight-semi-bold transition-2ms d-inline-block">View More</a>
+											<h4 class="mb-2 text-5 font-weight-semi-bold">Tented and tentless termite treatments</h4>
+											<p class="mb-2 font-weight-medium text-3">Our termite experts will work with you to keep your property safe from these insects all year long.</p>
+											<a href="services.html" class="text-uppercase text-2-5 stretched-link text-decoration-underline text-color-primary text-color-hover-tertiary font-weight-semi-bold transition-2ms d-inline-block">View More</a>
 										</div>
 									</div>
 								</div>
@@ -254,12 +254,12 @@
 								<div class="card-body p-5">
 									<div class="d-flex flex-row">
 										<div class="pt-2">
-											<img width="70" height="26" src="img/demos/transportation-logistic/icons/service-2.svg" alt="" data-icon data-plugin-options="{'onlySVG': true, 'extraClass': 'svg-fill-color-primary'}" />
+											<img width="90" height="63" src="img/animal-icons/termites-icon.svg" alt="" data-icon data-plugin-options="{'onlySVG': true, 'extraClass': 'svg-fill-color-primary'}" />
 										</div>
 										<div class="ps-4">
-											<h4 class="mb-2 text-5 font-weight-semi-bold">Air Freight</h4>
-											<p class="mb-2 font-weight-medium text-3">Lorem ipsum dolor sit amet, conse ctetur adipi scing elit.</p>
-											<a href="#" class="text-uppercase text-2-5 stretched-link text-decoration-underline text-color-primary text-color-hover-tertiary font-weight-semi-bold transition-2ms d-inline-block">View More</a>
+											<h4 class="mb-2 text-5 font-weight-semi-bold">Insect management</h4>
+											<p class="mb-2 font-weight-medium text-3">We help eliminate Spiders, Palm Pest Insects and Mites, Snails and Slugs, Terrestrial Slugs of Florida and more.</p>
+											<a href="services.html" class="text-uppercase text-2-5 stretched-link text-decoration-underline text-color-primary text-color-hover-tertiary font-weight-semi-bold transition-2ms d-inline-block">View More</a>
 										</div>
 									</div>
 								</div>
@@ -270,12 +270,12 @@
 								<div class="card-body p-5">
 									<div class="d-flex flex-row">
 										<div class="pt-2">
-											<img width="70" height="26" src="img/demos/transportation-logistic/icons/service-2.svg" alt="" data-icon data-plugin-options="{'onlySVG': true, 'extraClass': 'svg-fill-color-primary'}" />
+											<img width="70" height="43" src="img/animal-icons/wildlife-pest-icon.svg" alt="" data-icon data-plugin-options="{'onlySVG': true, 'extraClass': 'svg-fill-color-primary'}" />
 										</div>
 										<div class="ps-4">
-											<h4 class="mb-2 text-5 font-weight-semi-bold">Air Freight</h4>
-											<p class="mb-2 font-weight-medium text-3">Lorem ipsum dolor sit amet, conse ctetur adipi scing elit.</p>
-											<a href="#" class="text-uppercase text-2-5 stretched-link text-decoration-underline text-color-primary text-color-hover-tertiary font-weight-semi-bold transition-2ms d-inline-block">View More</a>
+											<h4 class="mb-2 text-5 font-weight-semi-bold">Reptiles and Snakes</h4>
+											<p class="mb-2 font-weight-medium text-3">An expert exterminator will be your full-service pest solutions provider specializing in the effective removal and prevention of reptiles and snakes.</p>
+											<a href="services.html" class="text-uppercase text-2-5 stretched-link text-decoration-underline text-color-primary text-color-hover-tertiary font-weight-semi-bold transition-2ms d-inline-block">View More</a>
 										</div>
 									</div>
 								</div>
@@ -286,17 +286,34 @@
 								<div class="card-body p-5">
 									<div class="d-flex flex-row">
 										<div class="pt-2">
-											<img width="70" height="26" src="img/demos/transportation-logistic/icons/service-2.svg" alt="" data-icon data-plugin-options="{'onlySVG': true, 'extraClass': 'svg-fill-color-primary'}" />
+											<img width="70" height="43" src="img/animal-icons/bees-icon.svg" alt="" data-icon data-plugin-options="{'onlySVG': true, 'extraClass': 'svg-fill-color-primary'}" />
 										</div>
 										<div class="ps-4">
-											<h4 class="mb-2 text-5 font-weight-semi-bold">Air Freight</h4>
-											<p class="mb-2 font-weight-medium text-3">Lorem ipsum dolor sit amet, conse ctetur adipi scing elit.</p>
-											<a href="#" class="text-uppercase text-2-5 stretched-link text-decoration-underline text-color-primary text-color-hover-tertiary font-weight-semi-bold transition-2ms d-inline-block">View More</a>
+											<h4 class="mb-2 text-5 font-weight-semi-bold"> Bees and wasps</h4>
+											<p class="mb-2 font-weight-medium text-3">We see a variety of stinging insects, from bumblebees and yellow jackets to carpenter bees and mud daubers.</p>
+											<a href="services.html" class="text-uppercase text-2-5 stretched-link text-decoration-underline text-color-primary text-color-hover-tertiary font-weight-semi-bold transition-2ms d-inline-block">View More</a>
 										</div>
 									</div>
 								</div>
 							</div>
 						</div>
+						<div class="col-lg-6 mb-4 anim-hover-translate-top-10px transition-3ms">
+							<div class="card">
+								<div class="card-body p-5">
+									<div class="d-flex flex-row">
+										<div class="pt-2">
+											<img width="70" height="43" src="img/animal-icons/wildlife-pest-icon.svg" alt="" data-icon data-plugin-options="{'onlySVG': true, 'extraClass': 'svg-fill-color-primary'}" />
+										</div>
+										<div class="ps-4">
+											<h4 class="mb-2 text-5 font-weight-semi-bold"> Raccoons</h4>
+											<p class="mb-2 font-weight-medium text-3">We have various control methods which we can employ depending on your circumstances. Traps, one-way doors, access points and more.</p>
+											<a href="services.html" class="text-uppercase text-2-5 stretched-link text-decoration-underline text-color-primary text-color-hover-tertiary font-weight-semi-bold transition-2ms d-inline-block">View More</a>
+										</div>
+									</div>
+								</div>
+							</div>
+						</div>
+						
 					</div>
 
 					<div class="row pt-2 pb-4">
