updated about us

--- a/about-us.html
+++ b/about-us.html
@@ -180,9 +180,9 @@
 						<div class="col-lg-6">
 							<p class="font-weight-medium text-8 line-height-4 text-color-tertiary negative-ls-1 p-relative bottom-10">We are <strong>committed</strong> to providing our clients the best pest control and termite services.</p>
 
-							<p class="line-height-8 font-weight-medium text-4">The insects and rodents that create so much bother for homeowners <span class="highlight highlight-primary highlight-bg-opacity highlight-animated text-color-tertiary" data-appear-animation="highlight-animated-start" data-appear-animation-delay="400" data-plugin-options="{'flagClassOnly': true}">are our area of expertise.</span> With a combined total of more than </p>
+							<p class="line-height-8 font-weight-medium text-4">We specialize in insects and rodents that create issues for businesses and homeowners<span class="highlight highlight-primary highlight-bg-opacity highlight-animated text-color-tertiary" data-appear-animation="highlight-animated-start" data-appear-animation-delay="400" data-plugin-options="{'flagClassOnly': true}">this is exactly our area of expertise.</span> With a combined total of more than </p>
 
-							<p class="custom-drop-caps font-weight-medium text-4 my-4"><span class="custom-drop-caps-number text-color-dark negative-ls-1"><span class="d-inline-block appear-animation" data-appear-animation="fadeIn" data-appear-animation-delay="0">15</span></span> 15 years in the pest control business, our personnel are equipped to handle even the most challenging circumstances safely.</p>
+							<p class="custom-drop-caps font-weight-medium text-4 my-4"><span class="custom-drop-caps-number text-color-dark negative-ls-1"><span class="d-inline-block appear-animation" data-appear-animation="fadeIn" data-appear-animation-delay="0">15</span></span> years in the pest control business, our personnel are equipped to handle even the most challenging circumstances safely.</p>
 
 							<p class="line-height-7 font-weight-regular text-3">We offer personalized treatment to better meet your unique needs. Thanks to our reasonable rates and first-rate personalized service, Belle Pest Management has long been the go-to choice for neighborhood pest control. No one, including pets and household plants, will suffer any negative effects from our treatments.</p>
 
