--- a/services.html
+++ b/services.html
@@ -179,7 +179,7 @@
 					<div class="row pt-5 mt-3 pb-3">
 						<div class="col">
 
-							<p class="font-weight-medium text-4">Lorem ipsum dolor sit amet, Pellentesque molestie vel turpis a sodales. consectetur adipiscing elit. Sed eget risus porta, tincidunt turpis at, interdum tortor. Suspendisse potenti. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sociis natoque penatibus et magnis dis parturient montes</p>
+							<p class="font-weight-medium text-4">You can rely on our team of highly qualified and experienced specialists to assist you when it comes to dealing with bugs. Our pest control specialists are more than capable of handling the mice, insects, and other pests that have made your house miserable to live in. Contact us right now!</p>
 
 						</div>
 					</div>
