updated about us

--- a/about-us.html
+++ b/about-us.html
@@ -211,7 +211,7 @@
 						</div>
 					</div>
 				</div>
-
+<!--
 				<section class="border-0 custom-bg-color-grey-1 pt-5 custom-el-pos-3 p-relative z-index-1 mt-5">
 					<div class="container py-5">
 						<div class="row justify-content-between">
@@ -231,7 +231,7 @@
 													</span>
 												</span>
 											</span>
-											<img src="img/demos/transportation-logistic/blog/post-thumb-1.jpg" class="img-fluid" alt="Lorem Ipsum Dolor" />
+											<img src="" class="img-fluid" alt="Lorem Ipsum Dolor" />
 										</a>
 									</div>
 									<div class="card-body py-4 px-0">
@@ -312,14 +312,14 @@
 						</div>
 					</div>
 				</section>
-
+-->
 			</div>
 			<footer id="footer" class="position-relative top-1 bg-tertiary border-top-0">
 
 				<div class="container py-5">
 					<div class="row pt-5">
 						<div class="col-lg-4">
-							<a href="demo-transportation-logistic.html" class="text-decoration-none">
+							<a href="" class="text-decoration-none">
 								<img src="image003.png" class="img-fluid mb-4" width="88">
 							</a>
 							<p class="text-3-5 pe-lg-2">Since its founding in 2008, Belle Pest Control has provided individualized pest management plans and cutting-edge technologies to safeguard homes and businesses throughout the state of Florida.</p>
