--- a/index.html
+++ b/index.html
@@ -550,7 +550,7 @@
 							</div>
 						</div>
 						<div class="col-lg-6 order-1 order-lg-2 p-0 p-relative z-index-2">
-							<section class="parallax custom-parallax-1 section section-parallax h-100 m-0" data-plugin-parallax data-plugin-options="{'speed': 1.5, 'horizontalPosition': '100%'}" data-image-src="img/demos/transportation-logistic/generic/generic-2.jpg" style="min-height: 500px;">
+							<section class="parallax custom-parallax-1 section section-parallax h-100 m-0" data-plugin-parallax data-plugin-options="{'speed': 1.5, 'horizontalPosition': '100%'}" data-image-src="img/bellepics/DF81E04E-B190-4FFB-82A3-34BDB5C9611E_1_102_o.jpeg" style="min-height: 500px;">
 							</section>
 						</div>
 					</div>
