added new image

--- a/index.html
+++ b/index.html
@@ -550,7 +550,7 @@
 							</div>
 						</div>
 						<div class="col-lg-6 order-1 order-lg-2 p-0 p-relative z-index-2">
-							<section class="parallax custom-parallax-1 section section-parallax h-100 m-0" data-plugin-parallax data-plugin-options="{'speed': 1.5, 'horizontalPosition': '100%'}" data-image-src="img/bellepics/DF81E04E-B190-4FFB-82A3-34BDB5C9611E_1_102_o.jpeg" style="min-height: 500px;">
+							<section class="parallax custom-parallax-1 section section-parallax h-100 m-0" data-plugin-parallax data-plugin-options="{'speed': 1.5, 'horizontalPosition': '100%'}" data-image-src="img/bellepics/3CED875E-F6D4-46D1-BF4B-A8ACD4083701_1_102_o.jpeg" style="min-height: 500px;">
 							</section>
 						</div>
 					</div>
@@ -617,7 +617,7 @@
 				<div class="container py-5">
 					<div class="row pt-5">
 						<div class="col-lg-4">
-							<a href="demo-transportation-logistic.html" class="text-decoration-none">
+							<a href="index.html" class="text-decoration-none">
 								<img src="image003.png" class="img-fluid mb-4" width="88">
 							</a>
 							<p class="text-3-5 pe-lg-2">Since its founding in 2008, Belle Pest Control has provided individualized pest management plans and cutting-edge technologies to safeguard homes and businesses throughout the state of Florida.</p>
