--- a/index.html
+++ b/index.html
@@ -6,15 +6,15 @@
 		<meta charset="utf-8">
 		<meta http-equiv="X-UA-Compatible" content="IE=edge">	
 
-		<title>Demo Transportation & Logistic | Porto - Multipurpose Website Template</title>	
+		<title>Belle Pest Control | Florida </title>	
 
-		<meta name="keywords" content="WebSite Template" />
-		<meta name="description" content="Porto - Multipurpose Website Template">
-		<meta name="author" content="okler.net">
+		<meta name="keywords" content="Pest Control" />
+		<meta name="description" content="Belle Pest Control Services">
+		<meta name="author" content="Yaunet Hernandez">
 
 		<!-- Favicon -->
-		<link rel="shortcut icon" href="img/favicon.ico" type="image/x-icon" />
-		<link rel="apple-touch-icon" href="img/apple-touch-icon.png">
+		<link rel="shortcut icon" href="image003.png" type="image/x-icon" />
+		<link rel="apple-touch-icon" href="image003.png">
 
 		<!-- Mobile Metas -->
 		<meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1.0, shrink-to-fit=no">
@@ -38,10 +38,10 @@
 		<link rel="stylesheet" href="css/theme-shop.css">
 
 		<!-- Demo CSS -->
-		<link rel="stylesheet" href="css/demos/demo-transportation-logistic.css">
+		<link rel="stylesheet" href="css/demos/bellepestcontrol.css">
 
 		<!-- Skin CSS -->
-		<link id="skinCSS" rel="stylesheet" href="css/skins/skin-transportation-logistic.css">
+		<link id="skinCSS" rel="stylesheet" href="css/skins/bellepestcontrol.css">
 
 		<!-- Theme Custom CSS -->
 		<link rel="stylesheet" href="css/custom.css">
@@ -623,7 +623,7 @@
 							<p class="text-3-5 pe-lg-2">Since its founding in 2008, Belle Pest Control has provided individualized pest management plans and cutting-edge technologies to safeguard homes and businesses throughout the state of Florida.</p>
 							<ul class="list list-unstyled">
 								<li class="d-flex align-items-center mb-4">
-									<a href="mailto:porto@transportation-logistic.com" class="d-inline-flex align-items-center text-decoration-none text-color-light text-color-hover-primary font-weight-semibold text-4-5">bellepestcontrol@gmail.com</a>
+									<a href="mailto:bellepestcontrol@gmail.com" class="d-inline-flex align-items-center text-decoration-none text-color-light text-color-hover-primary font-weight-semibold text-4-5">bellepestcontrol@gmail.com</a>
 								</li>
 								<li class="d-flex align-items-center mb-4">
 									<a href="tel:3057219863" class="d-inline-flex align-items-center text-decoration-none text-color-light text-color-hover-primary font-weight-semibold text-4-5">(305)-721-9863</a>
@@ -670,7 +670,7 @@
 		<script src="js/theme.js"></script>
 
 		<!-- Demo -->
-		<script src="js/demos/demo-transportation-logistic.js"></script>
+		<script src="js/demos/bellepestcontrol.js"></script>
 
 		<!-- Current Page Vendor and Views -->
 		<script src="js/views/view.contact.js"></script>
