--- a/services.html
+++ b/services.html
@@ -165,7 +165,7 @@
 							<div class="row">
 								<div class="col">
 									<ul class="breadcrumb text-4 font-weight-semi-bold mb-2">
-										<li><a href="demo-transportation-logistic.html" class="text-color-primary text-decoration-none text-capitalize">Home</a></li>
+										<li><a href="index.html" class="text-color-primary text-decoration-none text-capitalize">Home</a></li>
 										<li class="text-color-primary active text-capitalize">Services</li>
 									</ul>
 									<h1 class="text-color-tertiary font-weight-semi-bold text-9">Services</h1>
@@ -407,13 +407,13 @@
 				<div class="container py-5">
 					<div class="row pt-5">
 						<div class="col-lg-4">
-							<a href="demo-transportation-logistic.html" class="text-decoration-none">
+							<a href="index.html" class="text-decoration-none">
 								<img src="image003.png" class="img-fluid mb-4" width="88">
 							</a>
 							<p class="text-3-5 pe-lg-2">Since its founding in 2008, Belle Pest Control has provided individualized pest management plans and cutting-edge technologies to safeguard homes and businesses throughout the state of Florida.</p>
 							<ul class="list list-unstyled">
 								<li class="d-flex align-items-center mb-4">
-									<a href="mailto:porto@transportation-logistic.com" class="d-inline-flex align-items-center text-decoration-none text-color-light text-color-hover-primary font-weight-semibold text-4-5">bellepestcontrol@gmail.com</a>
+									<a href="mailto:bellepestcontrol@gmail.com" class="d-inline-flex align-items-center text-decoration-none text-color-light text-color-hover-primary font-weight-semibold text-4-5">bellepestcontrol@gmail.com</a>
 								</li>
 								<li class="d-flex align-items-center mb-4">
 									<a href="tel:3057219863" class="d-inline-flex align-items-center text-decoration-none text-color-light text-color-hover-primary font-weight-semibold text-4-5">(305)-721-9863</a>
