--- a/index.html
+++ b/index.html
@@ -434,7 +434,7 @@
 					<div class="container py-5">
 						<div class="row">
 							<div class="col">
-								<h2 class="custom-heading-1"><span class="d-inline-block appear-animation" data-appear-animation="fadeInUpShorterPlus" data-appear-animation-delay="0">testimonials</span></h2>
+								<h2 class="custom-heading-1"><span class="d-inline-block appear-animation" data-appear-animation="fadeInUpShorterPlus" data-appear-animation-delay="0" style="color: black;">testimonials</span></h2>
 							</div>
 						</div>
 						<div class="row pt-4">
@@ -491,7 +491,7 @@
 							<div class="col-lg-9 mb-3 mb-lg-0">
 								<p class="text-color-light text-4-5 font-weight-medium line-height-4 mb-0">
 									<span class="d-inline-block appear-animation" data-appear-animation="fadeInUpShorterPlus" data-appear-animation-delay="0">
-										<strong>Request Rate Online</strong> - Need Immediate Confirmation? Call Us at <u>(305) 721 9863										</u>
+										<strong>Request Rate Online</strong> - Need Immediate Confirmation? Call Us at <u> <span style="color:white;">(305) 721 9863</span>(305) 721 9863										</u>
 									</span>
 								</p>
 							</div>
