--- a/services.html
+++ b/services.html
@@ -241,7 +241,7 @@
 											<img width="90" height="63" src="img/animal-icons/termites-icon.svg" alt="" data-icon data-plugin-options="{'onlySVG': true, 'extraClass': 'svg-fill-color-primary'}" />
 										</div>
 										<div class="ps-4">
-											<h4 class="mb-2 text-5 font-weight-semi-bold">Tented and tentless termite treatments</h4>
+											<h4 class="mb-2 text-5 font-weight-semi-bold">Tentless termite treatments</h4>
 											<p class="mb-2 font-weight-medium text-3">Our termite experts will work with you to keep your property safe from these insects all year long.</p>
 											<a href="services.html" class="text-uppercase text-2-5 stretched-link text-decoration-underline text-color-primary text-color-hover-tertiary font-weight-semi-bold transition-2ms d-inline-block">View More</a>
 										</div>
