--- a/index.html
+++ b/index.html
@@ -595,15 +595,16 @@
 							<div class="col">
 								<div class="owl-carousel owl-theme nav-dark nav-style-1 nav-arrows-thin nav-font-size-lg nav-outside mb-0" data-plugin-options="{'responsive': {'0': {'items': 1}, '479': {'items': 1}, '768': {'items': 2}, '979': {'items': 2}, '1199': {'items': 4}}, 'loop': false, 'nav': true, 'dots': false, 'margin': 40}">
 									<div>
-										<p class="font-weight-semibold text-color-tertiary text-4 line-height-6 mb-2">Miami, FL, United States</p>
+										<p class="font-weight-semibold text-color-tertiary text-4 line-height-6 mb-2">South Florida Area, United States</p>
 										<p class="font-weight-medium text-3 line-height-5 mb-2"><a href="mailto:bellepestcontrol@gmail.com">bellepestcontrol@gmail.com</a></p>
 										<p class="font-weight-medium text-3 line-height-5 mb-0">(305) 721 9863</p>
 									</div>
+									<!--
 									<div>
 										<p class="font-weight-semibold text-color-tertiary text-4 line-height-6 mb-2">Naples, FL, United States</p>
 										<p class="font-weight-medium text-3 line-height-5 mb-2"><a href="mailto:bellepestcontrol@gmail.com">bellepestcontrol@gmail.com</a></p>
 										<p class="font-weight-medium text-3 line-height-5 mb-0">(305) 721 9863</p>
-									</div>
+									</div>-->
 								</div>
 							</div>
 						</div>
