--- a/index.html
+++ b/index.html
@@ -454,7 +454,7 @@
 												<p class="mb-0 line-height-8 font-weight-medium text-4">We have been doing business together now for more than 8 years. Many termite companies have come and gone but you have been here and will always be here because of the time and care you take with your customers. I am proud that I recommended you, and my client couldn’t be happier.</p>
 											</blockquote>
 											<div class="testimonial-author border-0">
-												<p><strong class="font-weight-extra-bold pt-2">Name</strong> <span>Residential Customer &amp; </span></p>
+												<p><strong class="font-weight-extra-bold pt-2">Roberto Sanchez</strong> <span>Residential Customer</span></p>
 											</div>
 										</div>
 									</div>
@@ -464,7 +464,7 @@
 												<p class="mb-0 line-height-8 font-weight-medium text-4">We have been utilizing the fine services of Belle Pest Control for 6 years. Operating as a restaurant in the Miami Beach area, we are under constant pressure to keep our facility pest free. Belle Pest control has always done a wonderful job helping us accomplish this. The office staff is always friendly and helpful and the technicians are always prompt, courteous, and well educated about their work. We highly recommend Belle Pest Control to all our clients for their at home pest control needs.</p>
 											</blockquote>
 											<div class="testimonial-author border-0">
-												<p><strong class="font-weight-extra-bold pt-2">Name</strong><span> Commerical Customer &amp;</span></p>
+												<p><strong class="font-weight-extra-bold pt-2">Maria Harper</strong><span> Commerical Customer </span></p>
 											</div>
 										</div>
 									</div>
@@ -474,7 +474,7 @@
 												<p class="mb-0 line-height-8 font-weight-medium text-4">Thank you for the wonderful service your Company has provided to my Family. Specifically, my Mother had serious bug problems at her home, and your business responded immediately and in such a professional manner.</p>
 											</blockquote>
 											<div class="testimonial-author border-0">
-												<p><strong class="font-weight-extra-bold pt-2">Name</strong> <span> Residential Customer&amp; </span></p>
+												<p><strong class="font-weight-extra-bold pt-2">Manuel Cordero</strong> <span> Residential Customer</span></p>
 											</div>
 										</div>
 									</div>
