--- a/index.html
+++ b/index.html
@@ -491,7 +491,7 @@
 							<div class="col-lg-9 mb-3 mb-lg-0">
 								<p class="text-color-light text-4-5 font-weight-medium line-height-4 mb-0">
 									<span class="d-inline-block appear-animation" data-appear-animation="fadeInUpShorterPlus" data-appear-animation-delay="0">
-										<strong>Request Rate Online</strong> - Need Immediate Confirmation? Call Us at <u> <span style="color:white;">(305) 721 9863</span>(305) 721 9863										</u>
+										<strong>Request Rate Online</strong> - Need Immediate Confirmation? Call Us at <u> <span style="color:white;">(305) 721 9863</span></u>
 									</span>
 								</p>
 							</div>
