--- a/contact-us.html
+++ b/contact-us.html
@@ -178,7 +178,8 @@
 				<div class="container">
 					<div class="row py-5 my-3">
 						<div class="col">
-							<form class="contact-form form-style-3" action="php/contact-form.php" method="POST">
+							<form class="contact-form form-style-3" action="https://getform.io/f/2fc50743-ae87-4520-a4f7-f6ab183654b4" method="POST">
+								<!--action="php/contact-form.php"-->
                                 <div class="contact-form-success alert alert-success d-none mt-4">
                                     <strong>Success!</strong> Your message has been sent to us.
                                 </div>
