--- a/contact-us.html
+++ b/contact-us.html
@@ -178,7 +178,7 @@
 				<div class="container">
 					<div class="row py-5 my-3">
 						<div class="col">
-							<form class="contact-form form-style-3" action="https:/formbold.com/s/9g54o" method="POST">
+							<form class="contact-form form-style-3" action="https://formbold.com/s/9g54o" method="POST">
 								<!--action="php/contact-form.php"-->
                                 <div class="contact-form-success alert alert-success d-none mt-4">
                                     <strong>Success!</strong> Your message has been sent to us.
