--- a/contact-us.html
+++ b/contact-us.html
@@ -194,7 +194,7 @@
 						<div class="col">
 							<form class="contact-form form-style-3" action="https://formbold.com/s/9g54o" method="POST">
 								<!--action="php/contact-form.php"-->
-                                <div ="thank-you-message" class="contact-form-success alert alert-success d-none mt-4">
+                                <div id="thank-you-message" class="contact-form-success alert alert-success d-none mt-4">
                                     <strong>Success!</strong> Your message has been sent to us.
                                 </div>
 
